parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> stmts
Rule 1     stmts -> stmt SEMICOLON stmts
Rule 2     stmts -> COMMENT
Rule 3     stmts -> <empty>
Rule 4     stmt -> expr
Rule 5     stmt -> empty
Rule 6     stmt -> var_dec
Rule 7     stmt -> var_initialize
Rule 8     stmt -> var_assign
Rule 9     stmt -> var_access
Rule 10    stmt -> function_call
Rule 11    stmt -> loop
Rule 12    stmt -> struct_definition
Rule 13    stmt -> struct_attribute_initialize
Rule 14    stmt -> unary_op
Rule 15    struct_definition -> STRUCT NAME EQUALS LBRACE attribute_dec RBRACE
Rule 16    attribute_dec -> var_dec SEMICOLON attribute_dec
Rule 17    attribute_dec -> var_initialize SEMICOLON attribute_dec
Rule 18    attribute_dec -> var_dec SEMICOLON
Rule 19    attribute_dec -> var_initialize SEMICOLON
Rule 20    attribute_dec -> empty
Rule 21    var_access -> NAME
Rule 22    struct_access -> NAME DOT NAME
Rule 23    var_assign -> NAME EQUALS expr
Rule 24    var_dec -> identifier NAME
Rule 25    var_initialize -> identifier NAME EQUALS expr
Rule 26    var_initialize -> identifier NAME EQUALS NAME
Rule 27    identifier -> INTDEC
Rule 28    identifier -> DOUBLEDEC
Rule 29    identifier -> STRINGDEC
Rule 30    identifier -> BOOLDEC
Rule 31    identifier -> CHARDEC
Rule 32    identifier -> NAME
Rule 33    struct_attribute_initialize -> NAME DOT NAME EQUALS expr
Rule 34    expr -> LPAR expr RPAR
Rule 35    expr -> unary_op
Rule 36    expr -> expr MULTIPLY expr
Rule 37    expr -> expr DIVIDE expr
Rule 38    expr -> expr PLUS expr
Rule 39    expr -> expr MINUS expr
Rule 40    expr -> expr MOD expr
Rule 41    expr -> expr EXPONENT expr
Rule 42    expr -> DOUBLE
Rule 43    expr -> INT
Rule 44    expr -> MINUS DOUBLE
Rule 45    expr -> MINUS INT
Rule 46    expr -> STRING
Rule 47    expr -> TRUE
Rule 48    expr -> FALSE
Rule 49    expr -> var_access
Rule 50    expr -> struct_access
Rule 51    expr -> empty
Rule 52    unary_op -> var_access INCREMENT
Rule 53    unary_op -> var_access DECREMENT
Rule 54    unary_op -> struct_access INCREMENT
Rule 55    unary_op -> struct_access DECREMENT
Rule 56    unary_op -> MINUS var_access
Rule 57    expr -> expr conditional_operators expr
Rule 58    expr -> NOT expr
Rule 59    conditional_operators -> EQEQ
Rule 60    conditional_operators -> LESS
Rule 61    conditional_operators -> GREATER
Rule 62    conditional_operators -> AND
Rule 63    conditional_operators -> OR
Rule 64    conditional_operators -> GREATEREQ
Rule 65    conditional_operators -> LESSEQ
Rule 66    conditional_operators -> NOTEQ
Rule 67    loop -> DO LBRACE stmts RBRACE WHILE LPAR expr RPAR
Rule 68    function_call -> PRINT LPAR opt_args RPAR
Rule 69    opt_args -> expr moreargs
Rule 70    moreargs -> COMMA expr moreargs
Rule 71    opt_args -> empty
Rule 72    moreargs -> empty
Rule 73    empty -> <empty>

Terminals, with rules where they appear

AND                  : 62
BOOLDEC              : 30
CHARDEC              : 31
COMMA                : 70
COMMENT              : 2
DECREMENT            : 53 55
DIVIDE               : 37
DO                   : 67
DOT                  : 22 33
DOUBLE               : 42 44
DOUBLEDEC            : 28
EQEQ                 : 59
EQUALS               : 15 23 25 26 33
EXPONENT             : 41
FALSE                : 48
GREATER              : 61
GREATEREQ            : 64
INCREMENT            : 52 54
INT                  : 43 45
INTDEC               : 27
LBRACE               : 15 67
LESS                 : 60
LESSEQ               : 65
LPAR                 : 34 67 68
MINUS                : 39 44 45 56
MOD                  : 40
MULTIPLY             : 36
NAME                 : 15 21 22 22 23 24 25 26 26 32 33 33
NOT                  : 58
NOTEQ                : 66
OR                   : 63
PLUS                 : 38
PRINT                : 68
RBRACE               : 15 67
RPAR                 : 34 67 68
SEMICOLON            : 1 16 17 18 19
STRING               : 46
STRINGDEC            : 29
STRUCT               : 15
TRUE                 : 47
WHILE                : 67
error                : 

Nonterminals, with rules where they appear

attribute_dec        : 15 16 17
conditional_operators : 57
empty                : 5 20 51 71 72
expr                 : 4 23 25 33 34 36 36 37 37 38 38 39 39 40 40 41 41 57 57 58 67 69 70
function_call        : 10
identifier           : 24 25 26
loop                 : 11
moreargs             : 69 70
opt_args             : 68
stmt                 : 1
stmts                : 1 67 0
struct_access        : 50 54 55
struct_attribute_initialize : 13
struct_definition    : 12
unary_op             : 14 35
var_access           : 9 49 52 53 56
var_assign           : 8
var_dec              : 6 16 18
var_initialize       : 7 17 19

Parsing method: LALR

state 0

    (0) S' -> . stmts
    (1) stmts -> . stmt SEMICOLON stmts
    (2) stmts -> . COMMENT
    (3) stmts -> .
    (4) stmt -> . expr
    (5) stmt -> . empty
    (6) stmt -> . var_dec
    (7) stmt -> . var_initialize
    (8) stmt -> . var_assign
    (9) stmt -> . var_access
    (10) stmt -> . function_call
    (11) stmt -> . loop
    (12) stmt -> . struct_definition
    (13) stmt -> . struct_attribute_initialize
    (14) stmt -> . unary_op
    (34) expr -> . LPAR expr RPAR
    (35) expr -> . unary_op
    (36) expr -> . expr MULTIPLY expr
    (37) expr -> . expr DIVIDE expr
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr MOD expr
    (41) expr -> . expr EXPONENT expr
    (42) expr -> . DOUBLE
    (43) expr -> . INT
    (44) expr -> . MINUS DOUBLE
    (45) expr -> . MINUS INT
    (46) expr -> . STRING
    (47) expr -> . TRUE
    (48) expr -> . FALSE
    (49) expr -> . var_access
    (50) expr -> . struct_access
    (51) expr -> . empty
    (57) expr -> . expr conditional_operators expr
    (58) expr -> . NOT expr
    (73) empty -> .
    (24) var_dec -> . identifier NAME
    (25) var_initialize -> . identifier NAME EQUALS expr
    (26) var_initialize -> . identifier NAME EQUALS NAME
    (23) var_assign -> . NAME EQUALS expr
    (21) var_access -> . NAME
    (68) function_call -> . PRINT LPAR opt_args RPAR
    (67) loop -> . DO LBRACE stmts RBRACE WHILE LPAR expr RPAR
    (15) struct_definition -> . STRUCT NAME EQUALS LBRACE attribute_dec RBRACE
    (33) struct_attribute_initialize -> . NAME DOT NAME EQUALS expr
    (52) unary_op -> . var_access INCREMENT
    (53) unary_op -> . var_access DECREMENT
    (54) unary_op -> . struct_access INCREMENT
    (55) unary_op -> . struct_access DECREMENT
    (56) unary_op -> . MINUS var_access
    (22) struct_access -> . NAME DOT NAME
    (27) identifier -> . INTDEC
    (28) identifier -> . DOUBLEDEC
    (29) identifier -> . STRINGDEC
    (30) identifier -> . BOOLDEC
    (31) identifier -> . CHARDEC
    (32) identifier -> . NAME

  ! shift/reduce conflict for MINUS resolved as shift
    COMMENT         shift and go to state 3
    $end            reduce using rule 3 (stmts -> .)
    LPAR            shift and go to state 15
    DOUBLE          shift and go to state 17
    INT             shift and go to state 18
    MINUS           shift and go to state 16
    STRING          shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    NOT             shift and go to state 23
    SEMICOLON       reduce using rule 73 (empty -> .)
    MULTIPLY        reduce using rule 73 (empty -> .)
    DIVIDE          reduce using rule 73 (empty -> .)
    PLUS            reduce using rule 73 (empty -> .)
    MOD             reduce using rule 73 (empty -> .)
    EXPONENT        reduce using rule 73 (empty -> .)
    EQEQ            reduce using rule 73 (empty -> .)
    LESS            reduce using rule 73 (empty -> .)
    GREATER         reduce using rule 73 (empty -> .)
    AND             reduce using rule 73 (empty -> .)
    OR              reduce using rule 73 (empty -> .)
    GREATEREQ       reduce using rule 73 (empty -> .)
    LESSEQ          reduce using rule 73 (empty -> .)
    NOTEQ           reduce using rule 73 (empty -> .)
    NAME            shift and go to state 25
    PRINT           shift and go to state 26
    DO              shift and go to state 27
    STRUCT          shift and go to state 28
    INTDEC          shift and go to state 29
    DOUBLEDEC       shift and go to state 30
    STRINGDEC       shift and go to state 31
    BOOLDEC         shift and go to state 32
    CHARDEC         shift and go to state 33

  ! MINUS           [ reduce using rule 73 (empty -> .) ]

    stmts                          shift and go to state 1
    stmt                           shift and go to state 2
    expr                           shift and go to state 4
    empty                          shift and go to state 5
    var_dec                        shift and go to state 6
    var_initialize                 shift and go to state 7
    var_assign                     shift and go to state 8
    var_access                     shift and go to state 9
    function_call                  shift and go to state 10
    loop                           shift and go to state 11
    struct_definition              shift and go to state 12
    struct_attribute_initialize    shift and go to state 13
    unary_op                       shift and go to state 14
    struct_access                  shift and go to state 22
    identifier                     shift and go to state 24

state 1

    (0) S' -> stmts .



state 2

    (1) stmts -> stmt . SEMICOLON stmts

    SEMICOLON       shift and go to state 34


state 3

    (2) stmts -> COMMENT .

    $end            reduce using rule 2 (stmts -> COMMENT .)
    RBRACE          reduce using rule 2 (stmts -> COMMENT .)


state 4

    (4) stmt -> expr .
    (36) expr -> expr . MULTIPLY expr
    (37) expr -> expr . DIVIDE expr
    (38) expr -> expr . PLUS expr
    (39) expr -> expr . MINUS expr
    (40) expr -> expr . MOD expr
    (41) expr -> expr . EXPONENT expr
    (57) expr -> expr . conditional_operators expr
    (59) conditional_operators -> . EQEQ
    (60) conditional_operators -> . LESS
    (61) conditional_operators -> . GREATER
    (62) conditional_operators -> . AND
    (63) conditional_operators -> . OR
    (64) conditional_operators -> . GREATEREQ
    (65) conditional_operators -> . LESSEQ
    (66) conditional_operators -> . NOTEQ

    SEMICOLON       reduce using rule 4 (stmt -> expr .)
    MULTIPLY        shift and go to state 35
    DIVIDE          shift and go to state 36
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    MOD             shift and go to state 39
    EXPONENT        shift and go to state 40
    EQEQ            shift and go to state 42
    LESS            shift and go to state 43
    GREATER         shift and go to state 44
    AND             shift and go to state 45
    OR              shift and go to state 46
    GREATEREQ       shift and go to state 47
    LESSEQ          shift and go to state 48
    NOTEQ           shift and go to state 49

    conditional_operators          shift and go to state 41

state 5

    (5) stmt -> empty .
    (51) expr -> empty .

  ! reduce/reduce conflict for SEMICOLON resolved using rule 5 (stmt -> empty .)
    SEMICOLON       reduce using rule 5 (stmt -> empty .)
    MULTIPLY        reduce using rule 51 (expr -> empty .)
    DIVIDE          reduce using rule 51 (expr -> empty .)
    PLUS            reduce using rule 51 (expr -> empty .)
    MINUS           reduce using rule 51 (expr -> empty .)
    MOD             reduce using rule 51 (expr -> empty .)
    EXPONENT        reduce using rule 51 (expr -> empty .)
    EQEQ            reduce using rule 51 (expr -> empty .)
    LESS            reduce using rule 51 (expr -> empty .)
    GREATER         reduce using rule 51 (expr -> empty .)
    AND             reduce using rule 51 (expr -> empty .)
    OR              reduce using rule 51 (expr -> empty .)
    GREATEREQ       reduce using rule 51 (expr -> empty .)
    LESSEQ          reduce using rule 51 (expr -> empty .)
    NOTEQ           reduce using rule 51 (expr -> empty .)

  ! SEMICOLON       [ reduce using rule 51 (expr -> empty .) ]


state 6

    (6) stmt -> var_dec .

    SEMICOLON       reduce using rule 6 (stmt -> var_dec .)


state 7

    (7) stmt -> var_initialize .

    SEMICOLON       reduce using rule 7 (stmt -> var_initialize .)


state 8

    (8) stmt -> var_assign .

    SEMICOLON       reduce using rule 8 (stmt -> var_assign .)


state 9

    (9) stmt -> var_access .
    (49) expr -> var_access .
    (52) unary_op -> var_access . INCREMENT
    (53) unary_op -> var_access . DECREMENT

  ! reduce/reduce conflict for SEMICOLON resolved using rule 9 (stmt -> var_access .)
    SEMICOLON       reduce using rule 9 (stmt -> var_access .)
    MULTIPLY        reduce using rule 49 (expr -> var_access .)
    DIVIDE          reduce using rule 49 (expr -> var_access .)
    PLUS            reduce using rule 49 (expr -> var_access .)
    MINUS           reduce using rule 49 (expr -> var_access .)
    MOD             reduce using rule 49 (expr -> var_access .)
    EXPONENT        reduce using rule 49 (expr -> var_access .)
    EQEQ            reduce using rule 49 (expr -> var_access .)
    LESS            reduce using rule 49 (expr -> var_access .)
    GREATER         reduce using rule 49 (expr -> var_access .)
    AND             reduce using rule 49 (expr -> var_access .)
    OR              reduce using rule 49 (expr -> var_access .)
    GREATEREQ       reduce using rule 49 (expr -> var_access .)
    LESSEQ          reduce using rule 49 (expr -> var_access .)
    NOTEQ           reduce using rule 49 (expr -> var_access .)
    INCREMENT       shift and go to state 50
    DECREMENT       shift and go to state 51

  ! SEMICOLON       [ reduce using rule 49 (expr -> var_access .) ]


state 10

    (10) stmt -> function_call .

    SEMICOLON       reduce using rule 10 (stmt -> function_call .)


state 11

    (11) stmt -> loop .

    SEMICOLON       reduce using rule 11 (stmt -> loop .)


state 12

    (12) stmt -> struct_definition .

    SEMICOLON       reduce using rule 12 (stmt -> struct_definition .)


state 13

    (13) stmt -> struct_attribute_initialize .

    SEMICOLON       reduce using rule 13 (stmt -> struct_attribute_initialize .)


state 14

    (14) stmt -> unary_op .
    (35) expr -> unary_op .

  ! reduce/reduce conflict for SEMICOLON resolved using rule 14 (stmt -> unary_op .)
    SEMICOLON       reduce using rule 14 (stmt -> unary_op .)
    MULTIPLY        reduce using rule 35 (expr -> unary_op .)
    DIVIDE          reduce using rule 35 (expr -> unary_op .)
    PLUS            reduce using rule 35 (expr -> unary_op .)
    MINUS           reduce using rule 35 (expr -> unary_op .)
    MOD             reduce using rule 35 (expr -> unary_op .)
    EXPONENT        reduce using rule 35 (expr -> unary_op .)
    EQEQ            reduce using rule 35 (expr -> unary_op .)
    LESS            reduce using rule 35 (expr -> unary_op .)
    GREATER         reduce using rule 35 (expr -> unary_op .)
    AND             reduce using rule 35 (expr -> unary_op .)
    OR              reduce using rule 35 (expr -> unary_op .)
    GREATEREQ       reduce using rule 35 (expr -> unary_op .)
    LESSEQ          reduce using rule 35 (expr -> unary_op .)
    NOTEQ           reduce using rule 35 (expr -> unary_op .)

  ! SEMICOLON       [ reduce using rule 35 (expr -> unary_op .) ]


state 15

    (34) expr -> LPAR . expr RPAR
    (34) expr -> . LPAR expr RPAR
    (35) expr -> . unary_op
    (36) expr -> . expr MULTIPLY expr
    (37) expr -> . expr DIVIDE expr
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr MOD expr
    (41) expr -> . expr EXPONENT expr
    (42) expr -> . DOUBLE
    (43) expr -> . INT
    (44) expr -> . MINUS DOUBLE
    (45) expr -> . MINUS INT
    (46) expr -> . STRING
    (47) expr -> . TRUE
    (48) expr -> . FALSE
    (49) expr -> . var_access
    (50) expr -> . struct_access
    (51) expr -> . empty
    (57) expr -> . expr conditional_operators expr
    (58) expr -> . NOT expr
    (52) unary_op -> . var_access INCREMENT
    (53) unary_op -> . var_access DECREMENT
    (54) unary_op -> . struct_access INCREMENT
    (55) unary_op -> . struct_access DECREMENT
    (56) unary_op -> . MINUS var_access
    (21) var_access -> . NAME
    (22) struct_access -> . NAME DOT NAME
    (73) empty -> .

  ! shift/reduce conflict for MINUS resolved as shift
    LPAR            shift and go to state 15
    DOUBLE          shift and go to state 17
    INT             shift and go to state 18
    MINUS           shift and go to state 16
    STRING          shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    NOT             shift and go to state 23
    NAME            shift and go to state 56
    RPAR            reduce using rule 73 (empty -> .)
    MULTIPLY        reduce using rule 73 (empty -> .)
    DIVIDE          reduce using rule 73 (empty -> .)
    PLUS            reduce using rule 73 (empty -> .)
    MOD             reduce using rule 73 (empty -> .)
    EXPONENT        reduce using rule 73 (empty -> .)
    EQEQ            reduce using rule 73 (empty -> .)
    LESS            reduce using rule 73 (empty -> .)
    GREATER         reduce using rule 73 (empty -> .)
    AND             reduce using rule 73 (empty -> .)
    OR              reduce using rule 73 (empty -> .)
    GREATEREQ       reduce using rule 73 (empty -> .)
    LESSEQ          reduce using rule 73 (empty -> .)
    NOTEQ           reduce using rule 73 (empty -> .)

  ! MINUS           [ reduce using rule 73 (empty -> .) ]

    expr                           shift and go to state 52
    unary_op                       shift and go to state 53
    var_access                     shift and go to state 54
    struct_access                  shift and go to state 22
    empty                          shift and go to state 55

state 16

    (44) expr -> MINUS . DOUBLE
    (45) expr -> MINUS . INT
    (56) unary_op -> MINUS . var_access
    (21) var_access -> . NAME

    DOUBLE          shift and go to state 57
    INT             shift and go to state 58
    NAME            shift and go to state 60

    var_access                     shift and go to state 59

state 17

    (42) expr -> DOUBLE .

    MULTIPLY        reduce using rule 42 (expr -> DOUBLE .)
    DIVIDE          reduce using rule 42 (expr -> DOUBLE .)
    PLUS            reduce using rule 42 (expr -> DOUBLE .)
    MINUS           reduce using rule 42 (expr -> DOUBLE .)
    MOD             reduce using rule 42 (expr -> DOUBLE .)
    EXPONENT        reduce using rule 42 (expr -> DOUBLE .)
    EQEQ            reduce using rule 42 (expr -> DOUBLE .)
    LESS            reduce using rule 42 (expr -> DOUBLE .)
    GREATER         reduce using rule 42 (expr -> DOUBLE .)
    AND             reduce using rule 42 (expr -> DOUBLE .)
    OR              reduce using rule 42 (expr -> DOUBLE .)
    GREATEREQ       reduce using rule 42 (expr -> DOUBLE .)
    LESSEQ          reduce using rule 42 (expr -> DOUBLE .)
    NOTEQ           reduce using rule 42 (expr -> DOUBLE .)
    SEMICOLON       reduce using rule 42 (expr -> DOUBLE .)
    RPAR            reduce using rule 42 (expr -> DOUBLE .)
    COMMA           reduce using rule 42 (expr -> DOUBLE .)


state 18

    (43) expr -> INT .

    MULTIPLY        reduce using rule 43 (expr -> INT .)
    DIVIDE          reduce using rule 43 (expr -> INT .)
    PLUS            reduce using rule 43 (expr -> INT .)
    MINUS           reduce using rule 43 (expr -> INT .)
    MOD             reduce using rule 43 (expr -> INT .)
    EXPONENT        reduce using rule 43 (expr -> INT .)
    EQEQ            reduce using rule 43 (expr -> INT .)
    LESS            reduce using rule 43 (expr -> INT .)
    GREATER         reduce using rule 43 (expr -> INT .)
    AND             reduce using rule 43 (expr -> INT .)
    OR              reduce using rule 43 (expr -> INT .)
    GREATEREQ       reduce using rule 43 (expr -> INT .)
    LESSEQ          reduce using rule 43 (expr -> INT .)
    NOTEQ           reduce using rule 43 (expr -> INT .)
    SEMICOLON       reduce using rule 43 (expr -> INT .)
    RPAR            reduce using rule 43 (expr -> INT .)
    COMMA           reduce using rule 43 (expr -> INT .)


state 19

    (46) expr -> STRING .

    MULTIPLY        reduce using rule 46 (expr -> STRING .)
    DIVIDE          reduce using rule 46 (expr -> STRING .)
    PLUS            reduce using rule 46 (expr -> STRING .)
    MINUS           reduce using rule 46 (expr -> STRING .)
    MOD             reduce using rule 46 (expr -> STRING .)
    EXPONENT        reduce using rule 46 (expr -> STRING .)
    EQEQ            reduce using rule 46 (expr -> STRING .)
    LESS            reduce using rule 46 (expr -> STRING .)
    GREATER         reduce using rule 46 (expr -> STRING .)
    AND             reduce using rule 46 (expr -> STRING .)
    OR              reduce using rule 46 (expr -> STRING .)
    GREATEREQ       reduce using rule 46 (expr -> STRING .)
    LESSEQ          reduce using rule 46 (expr -> STRING .)
    NOTEQ           reduce using rule 46 (expr -> STRING .)
    SEMICOLON       reduce using rule 46 (expr -> STRING .)
    RPAR            reduce using rule 46 (expr -> STRING .)
    COMMA           reduce using rule 46 (expr -> STRING .)


state 20

    (47) expr -> TRUE .

    MULTIPLY        reduce using rule 47 (expr -> TRUE .)
    DIVIDE          reduce using rule 47 (expr -> TRUE .)
    PLUS            reduce using rule 47 (expr -> TRUE .)
    MINUS           reduce using rule 47 (expr -> TRUE .)
    MOD             reduce using rule 47 (expr -> TRUE .)
    EXPONENT        reduce using rule 47 (expr -> TRUE .)
    EQEQ            reduce using rule 47 (expr -> TRUE .)
    LESS            reduce using rule 47 (expr -> TRUE .)
    GREATER         reduce using rule 47 (expr -> TRUE .)
    AND             reduce using rule 47 (expr -> TRUE .)
    OR              reduce using rule 47 (expr -> TRUE .)
    GREATEREQ       reduce using rule 47 (expr -> TRUE .)
    LESSEQ          reduce using rule 47 (expr -> TRUE .)
    NOTEQ           reduce using rule 47 (expr -> TRUE .)
    SEMICOLON       reduce using rule 47 (expr -> TRUE .)
    RPAR            reduce using rule 47 (expr -> TRUE .)
    COMMA           reduce using rule 47 (expr -> TRUE .)


state 21

    (48) expr -> FALSE .

    MULTIPLY        reduce using rule 48 (expr -> FALSE .)
    DIVIDE          reduce using rule 48 (expr -> FALSE .)
    PLUS            reduce using rule 48 (expr -> FALSE .)
    MINUS           reduce using rule 48 (expr -> FALSE .)
    MOD             reduce using rule 48 (expr -> FALSE .)
    EXPONENT        reduce using rule 48 (expr -> FALSE .)
    EQEQ            reduce using rule 48 (expr -> FALSE .)
    LESS            reduce using rule 48 (expr -> FALSE .)
    GREATER         reduce using rule 48 (expr -> FALSE .)
    AND             reduce using rule 48 (expr -> FALSE .)
    OR              reduce using rule 48 (expr -> FALSE .)
    GREATEREQ       reduce using rule 48 (expr -> FALSE .)
    LESSEQ          reduce using rule 48 (expr -> FALSE .)
    NOTEQ           reduce using rule 48 (expr -> FALSE .)
    SEMICOLON       reduce using rule 48 (expr -> FALSE .)
    RPAR            reduce using rule 48 (expr -> FALSE .)
    COMMA           reduce using rule 48 (expr -> FALSE .)


state 22

    (50) expr -> struct_access .
    (54) unary_op -> struct_access . INCREMENT
    (55) unary_op -> struct_access . DECREMENT

    MULTIPLY        reduce using rule 50 (expr -> struct_access .)
    DIVIDE          reduce using rule 50 (expr -> struct_access .)
    PLUS            reduce using rule 50 (expr -> struct_access .)
    MINUS           reduce using rule 50 (expr -> struct_access .)
    MOD             reduce using rule 50 (expr -> struct_access .)
    EXPONENT        reduce using rule 50 (expr -> struct_access .)
    EQEQ            reduce using rule 50 (expr -> struct_access .)
    LESS            reduce using rule 50 (expr -> struct_access .)
    GREATER         reduce using rule 50 (expr -> struct_access .)
    AND             reduce using rule 50 (expr -> struct_access .)
    OR              reduce using rule 50 (expr -> struct_access .)
    GREATEREQ       reduce using rule 50 (expr -> struct_access .)
    LESSEQ          reduce using rule 50 (expr -> struct_access .)
    NOTEQ           reduce using rule 50 (expr -> struct_access .)
    SEMICOLON       reduce using rule 50 (expr -> struct_access .)
    RPAR            reduce using rule 50 (expr -> struct_access .)
    COMMA           reduce using rule 50 (expr -> struct_access .)
    INCREMENT       shift and go to state 61
    DECREMENT       shift and go to state 62


state 23

    (58) expr -> NOT . expr
    (34) expr -> . LPAR expr RPAR
    (35) expr -> . unary_op
    (36) expr -> . expr MULTIPLY expr
    (37) expr -> . expr DIVIDE expr
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr MOD expr
    (41) expr -> . expr EXPONENT expr
    (42) expr -> . DOUBLE
    (43) expr -> . INT
    (44) expr -> . MINUS DOUBLE
    (45) expr -> . MINUS INT
    (46) expr -> . STRING
    (47) expr -> . TRUE
    (48) expr -> . FALSE
    (49) expr -> . var_access
    (50) expr -> . struct_access
    (51) expr -> . empty
    (57) expr -> . expr conditional_operators expr
    (58) expr -> . NOT expr
    (52) unary_op -> . var_access INCREMENT
    (53) unary_op -> . var_access DECREMENT
    (54) unary_op -> . struct_access INCREMENT
    (55) unary_op -> . struct_access DECREMENT
    (56) unary_op -> . MINUS var_access
    (21) var_access -> . NAME
    (22) struct_access -> . NAME DOT NAME
    (73) empty -> .
